--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -684,13 +684,11 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-footer-bg">
             <div class="container">
-                <div class="mil-footer-content mil-p-120-90">
+                <div class="mil-footer-content">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/logo-light.png" alt="" class="mil-logo mil-mb-30" style="width: 140px">
 
                             <p class="mil-light-soft mil-mb-30">We're your trusted partner in web development. At <a href="https://codingindia.co.in/">Coding India</a>, we transform ideas into stunning websites that make a mark. With a passion for innovation and a commitment to excellence, we create web solutions tailored to your needs. Let us bring your digital vision to life.</p>
 
