--- a/CodingIndia/website/templates/website/portfolio.html
+++ b/CodingIndia/website/templates/website/portfolio.html
@@ -11,7 +11,7 @@
                         <li><a style="color: white;" href="/">Home</a></li>
                         <li><a style="color: white;" href="portfolio.html">Works</a></li>
                     </ul>
-                    <h2 class="mil-uppercase" style="color: white;">Case Studies</h2>
+                    <h2 class="mil-uppercase" style="color: white;">Our Projects</h2>
                 </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <!-- portfolio -->
         <section class="mil-p-120-120">
             <div class="container">
-                {% for i in data %}
+                {% for i in page_obj %}
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
 
@@ -31,7 +31,7 @@
                     <div class="col-xl-5 mil-mb-60">
                         <span class="mil-suptitle mil-suptitle-2 mil-mb-30">{{i.desc}}</span>
                         <h3 class="mil-mb-30">{{i.name}}</h3>
-                        <a href="project.html" class="mil-button-with-label">
+                        <a href="{% url 'portfoliodetail' i.slug %}" class="mil-button-with-label">
                             <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
                         </a>
                     </div>
@@ -41,18 +41,23 @@
 
                 <div class="mil-divider mil-mb-60"></div>
 
-                <div class="mil-pagination mil-hidden-arrows">
-                    <div class="mil-slider-nav">
-                        <div class="mil-slider-btn-prev mil-blog-prev"><i class="fas fa-arrow-left"></i><span class="mil-h6">Prev</span></div>
-                    </div>
-                    <ul class="mil-pagination-numbers">
-                        <li class="mil-active"><a href="portfolio.html">1</a></li>
-                        <li><a href="portfolio.html">2</a></li>
-                        <li><a href="portfolio.html">3</a></li>
-                    </ul>
-                    <div class="mil-slider-nav">
-                        <div class="mil-slider-btn-next mil-blog-next"><span class="mil-h6">Next</span><i class="fas fa-arrow-right"></i></div>
-                    </div>
+                <div class="pagination">
+                    <span class="step-links">
+                        {% if page_obj.has_previous %}
+                            <a class="pagclass" style="border: 1px solid rgb(255, 157, 0); border-radius: 15px; padding: 15px;" href="?page=1">&laquo; first</a>
+                            <a class="pagclass" style="border: 1px solid rgb(255, 157, 0); border-radius: 15px; margin: 15px; padding: 15px;" href="?page={{ page_obj.previous_page_number }}">previous</a>
+                        {% endif %}
+                
+                        <span class="current" style="margin: 15px; text-decoration: underline;">
+                            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                        </span>
+                
+                        {% if page_obj.has_next %}
+                            <a class="pagclass" style="border: 1px solid rgb(255, 157, 0); border-radius: 15px; margin: 15px; padding: 15px;" href="?page={{ page_obj.next_page_number }}">next</a>
+                            <a class="pagclass" style="border: 1px solid rgb(255, 157, 0); border-radius: 15px; padding: 15px;" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                        {% endif %}
+                    </span>
+                    
                 </div>
             </div>
         </section>
