Working on chnges

--- a/CodingIndia/website/templates/website/portfolioproject.html
+++ b/CodingIndia/website/templates/website/portfolioproject.html
@@ -28,16 +28,18 @@
                             <h5 class="mil-list-title mil-mb-30">Project Info</h5>
 
                             <p class="mil-mb-10">Client</p>
-                            <h6 class="mil-mb-15">eCoshop Club</h6>
+                            <h6 class="mil-mb-15">{{data.client}}</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Service</p>
-                            <h6 class="mil-mb-15">App Development</h6>
+                            <h6 class="mil-mb-15">{{data.service}}</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Industry</p>
-                            <h6 class="mil-mb-15">Retail, eCommerce</h6>
+                            <h6 class="mil-mb-15">{{data.industry}}</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Stack</p>
-                            <h6>Android, Realm, Dagger 2, RxJava</h6>
+                            {% for i in data.skills.all %}
+                            <h6>{{i}}</h6>
+                            {% endfor %}
 
                         </div>
 
@@ -45,55 +47,15 @@
                     <div class="col-lg-7 col-xl-8">
 
                         <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Overviews</span>
-                        <h3 class="mil-mb-30">Challenge</h3>
-                        <p class="mil-mb-60">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
-                        <h3 class="mil-mb-30">Our Solution</h3>
-                        <p class="mil-mb-60">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                            <h3 class="mil-mb-30">The Challenge</h3>
+                            <p>{{data.challenge|safe}}</p>
 
-                        <div class="row">
-                            <div class="col-xl-6">
-
-                                <ul class="mil-check-icon-list mil-mb-15">
-                                    <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Quis suspendisse ultrices gravida.</span>
-                                    </li>
-                                    <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Consectetur adipiscing elit.</span>
-                                    </li>
-                                    <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Quis suspendisse ultrices gravida.</span>
-                                    </li>
-                                    <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Consectetur adipiscing elit.</span>
-                                    </li>
-                                </ul>
-
-                            </div>
-                            <div class="col-xl-6 mil-mb-30">
-
-                                <ul class="mil-check-icon-list">
-                                    <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Quis suspendisse ultrices gravida.</span>
-                                    </li>
-                                    <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Consectetur adipiscing elit.</span>
-                                    </li>
-                                    <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Quis suspendisse ultrices gravida.</span>
-                                    </li>
-                                </ul>
-
-                            </div>
-                        </div>
-
-
+                        <br>
+                        <br>
+                            <h3 class="mil-mb-30">The Solution</h3>
+                            <p>{{data.Solution|safe}}</p>
+    
+                            
                     </div>
                 </div>
 
@@ -111,79 +73,14 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-5 mil-mb-60">
 
-                        <h3 class="mil-mb-30">The Solution</h3>
-                        <p class="mil-mb-30">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/3.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">It is a long established fact that a reader will be</p>
-                        </div>
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/2.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">There are many variations of passages</p>
-                        </div>
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/5.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">All the Lorem Ipsum generators</p>
-                        </div>
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/6.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">Asearch for 'lorem ipsum' will uncover many</p>
-                        </div>
-
-                    </div>
-                    <div class="col-xl-6 mil-mb-60">
-
-                        <div class="mil-project-cover">
-                            <img src="img/projects/2.jpg" alt="Project">
-                        </div>
-
-                    </div>
-                </div>
-                <div class="row flex-sm-row-reverse justify-content-between align-items-center">
-                    <div class="col-xl-5 mil-mb-60">
-
                         <h3 class="mil-mb-30">The Impact</h3>
-                        <p class="mil-mb-30">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/7.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">It is a long established fact that a reader will be</p>
-                        </div>
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/4.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">There are many variations of passages</p>
-                        </div>
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/8.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">All the Lorem Ipsum generators</p>
-                        </div>
-                        <div class="mil-icon-box-head mil-long mil-mb-15">
-                            <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/9.svg" alt="icon">
-                            </div>
-                            <p class="mil-dark">Asearch for 'lorem ipsum' will uncover many</p>
-                        </div>
+                        <p>{{data.impact|safe}}</p>
 
                     </div>
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/2.jpg" alt="Project">
+                            <img src="{{data.img}}" alt="Project">
                         </div>
 
                     </div>
@@ -205,71 +102,11 @@
 
                         <h2 class="mil-mb-30">Conclusion</h2>
 
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has.</p>
+                        <p>{{data.conclusion|safe}}</p>
 
                     </div>
                 </div>
+</div>
 
-                <div class="row">
-                    <div class="col-md-6 col-xl-4">
 
-                        <div class="mil-icon-box-2 mil-mb-60">
-                            <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/1.svg" alt="icon">
-                            </div>
-                            <div class="mil-box-text">
-                                <h4 class="mil-mb-30">Data Engineering</h4>
-                                <p class="mil-box-text mil-mb-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-
-                        <div class="mil-icon-box-2 mil-mb-60">
-                            <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/2.svg" alt="icon">
-                            </div>
-                            <div class="mil-box-text">
-                                <h4 class="mil-mb-30">Channel Platforms</h4>
-                                <p class="mil-box-text mil-mb-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-
-                        <div class="mil-icon-box-2 mil-mb-60">
-                            <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/3.svg" alt="icon">
-                            </div>
-                            <div class="mil-box-text">
-                                <h4 class="mil-mb-30">Dewelopment</h4>
-                                <p class="mil-box-text mil-mb-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- conclusion end -->
-
-        <div class="container">
-            <div class="mil-divider mil-mb-60"></div>
-        </div>
-
-        <!-- pagination -->
-        <div class="container mil-mb-120">
-            <div class="mil-pagination mil-hidden-button">
-                <a href="project.html" class="mil-slider-nav">
-                    <div class="mil-slider-btn-prev mil-button-sm mil-blog-prev"><i class="fas fa-arrow-left"></i><span class="mil-h6">Prev</span></div>
-                </a>
-                <a href="portfolio.html" class="mil-button-all"><span><i class="fas fa-list"></i></span></a>
-                <div class="mil-slider-nav">
-                    <a href="project.html" class="mil-slider-btn-next mil-blog-next"><span class="mil-h6">Next</span><i class="fas fa-arrow-right"></i></a>
-                </div>
-            </div>
-        </div>
-        <!-- pagination end -->
 {% endblock content %}
