Working on chnges

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="{% static 'css/plugins/swiper.min.css' %}">
     <!-- Coding India css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" href="{% static 'images/logo.ico' %}" type="image/x-icon">
+
     <title>Coding India</title>
 
     <!-- Google tag (gtag.js) -->
