--- a/CodingIndia/website/templates/website/portfolioproject.html
+++ b/CodingIndia/website/templates/website/portfolioproject.html
@@ -1,7 +1,19 @@
 {% extends 'website/index.html' %}
 
+{% block title %}
+<title>{{data.name}}</title>
+{% endblock title %}
+
+{% block meta %}
+<meta name="keywords" content="coding india projects, portfolio, software development, web development, app development, Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, MySQL, frontend development, backend development">
+
+<meta name="description" content="Discover Coding India's impressive portfolio showcasing our expertise in software development, web and app development using Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, and MySQL. Explore our successful projects and innovative solutions.">
+
+{% endblock meta %}
+
 
 {% block content %}
+
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg" style="background-color: black;">
