--- a/CodingIndia/website/templates/website/portfolio.html
+++ b/CodingIndia/website/templates/website/portfolio.html
@@ -1,5 +1,18 @@
 {% extends 'website/index.html' %}
 
+
+{% block title %}
+<title>Coding India Portfolio</title>
+{% endblock title %}
+
+{% block meta %}
+<meta name="keywords" content="coding india projects, portfolio, software development, web development, app development, Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, MySQL, frontend development, backend development">
+
+<meta name="description" content="Discover Coding India's impressive portfolio showcasing our expertise in software development, web and app development using Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, and MySQL. Explore our successful projects and innovative solutions.">
+
+{% endblock meta %}
+
+
 {% block content %}
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg" style="background-color: black;">
