Working on Changes

--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -9,7 +9,9 @@
 
 {% block meta %}
 <meta name="keywords" content="blog, articles, tutorials, software development, web design, Python, Django, HTML/CSS, JavaScript, jQuery, frontend development, backend development">
-<meta name="description" content="Explore a comprehensive list of relevant keywords related to Coding India's services, including coding, software development, web development, app development, Python, Django, HTML/CSS, JavaScript, jQuery, frontend development, backend development, and more.">
+<meta name="keywords" content="blog, articles, tutorials, web design, Python, Django, HTML/CSS, JavaScript">
+
+
 {% endblock meta %}
 
 {% block content %}
