--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -24,7 +24,8 @@
 
     {% block meta %}
     <meta name="keywords" content="Coding, Programming, Coding Services, Software Development, Web Development, App Development, Python Development, Django Development, HTML, CSS, Bootstrap Framework, MySQL Database, JavaScript, jQuery, Frontend Development, Backend Development, Custom Software Solutions, Technology Consulting, Agile Development, Innovative Solutions, UI/UX Design, Responsive Web Design, Mobile App Design">
-    <meta name="description" content="Coding India specializes in software development, web and app development using Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, and MySQL. We offer custom solutions, technology consulting, and innovative UI/UX design for responsive web and mobile app development.">
+    <meta name="description" content="Discover Coding India's key services, from coding to web & app development in Python, Django, HTML/CSS, JavaScript, jQuery, frontend & backend development, and more.">
+
     {% endblock meta %}
 
     <!-- Google tag (gtag.js) -->
