--- a/CodingIndia/website/templates/website/portfolio.html
+++ b/CodingIndia/website/templates/website/portfolio.html
@@ -8,7 +8,8 @@
 {% block meta %}
 <meta name="keywords" content="coding india projects, portfolio, software development, web development, app development, Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, MySQL, frontend development, backend development">
 
-<meta name="description" content="Discover Coding India's impressive portfolio showcasing our expertise in software development, web and app development using Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, and MySQL. Explore our successful projects and innovative solutions.">
+<meta name="description" content="Explore Coding India's successful projects in Python, Django, HTML/CSS, Bootstrap, JavaScript, jQuery, and MySQL.">
+
 
 {% endblock meta %}
 
