Working on Changes

--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -5,8 +5,8 @@
 {% endblock title %}
 
 {% block meta %}
-<meta name="keywords" content='{{blogs.tags}}'>
-<meta name="description" content="{{blogs.description|safe|slice:'0:150'}}">
+<meta name="keywords" content='{{blog.tags}}'>
+<meta name="description" content="{{blog.description|safe|slice:'0:150'}}">
 {% endblock meta %}
 
 
