Working on changes

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -57,7 +57,7 @@
                     <div class="mil-navigation">
                         <nav>
                             <ul>
-                                <li class="mil-has-children">
+                                <!-- <li class="mil-has-children">
                                     <a href="#.">Services</a>
                                     <ul>
                                         <li><a href="{% url 'contactus' %}">AI/ML</a></li>
@@ -65,9 +65,12 @@
                                         <li><a href="{% url 'contactus' %}">App Development</a></li>
                                         <li><a href="{% url 'genintro' %}">Gemini AI</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li><a href="{% url 'blogs_index' %}">Blogs</a></li>
+                                <li><a href="{% url 'genintro' %}">Power AI</a></li>
+                                <li><a href="https://www.youtube.com/@CodinIndia">Video Tutorial</a></li>
                                 <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
+                                <li><a href="{% url 'aboutus' %}">About Us</a></li>
                                 <li><a href="{% url 'contactus' %}">Contact Us</a></li>
                             </ul>
                             <div class="mil-search-icon">
