Working on changes

--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -30,7 +30,7 @@
                   <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
                       <li class="mil-post-author"><span>{{blog.author}}</span></li>
                       <li>{{blog.pub_date}}</li>
-                      <li>{{blog.readtime}}</li>
+                      <li>{{blog.readtime}} min</li>
                   </ul>
                   <div class="mil-divider mil-mb-60"></div>
 
